# pypredict-mcp

./: LICENSE  README.md  agent.py  app.py  main.py  pyproject.toml
examples/: app.py
src/pypredict_mcp/: agent.py  config.py  exceptions.py  main.py
tests/: test_main.py
