[project]
name = "pypredict-mcp"
version = "0.1.0"
description = "MCP server for predicting satellite transits over a given location."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.1.0",
    "gradio>=5.34.2",
    "mcp>=1.9.4",
    "openai-agents>=0.0.19",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.3.4",
    "pypredict>=1.7.2",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.sources]
"pypredict_mcp" = "src/pypredict_mcp"

[tool.hatch.build.targets.wheel]
packages = ["pypredict_mcp"]
